--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
     <div class="container-fluid">
       <div class="row text-light py-4">
         <div class="col-md-3 col-sm-6">
-          <h5 class="mb-3"><img src="./img/logo6.png" alt="footericon" width="70px"/>About PLANNCO</h5>
+          <h5 class="mb-3"><img src="./img/logo6.png" alt="footericon" width="70px"/>About BEAUTIFY</h5>
           <p class="small">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis eligendi cumque accusantium at, illo odit ea commodi quam modi quas!</p>
   
         </div>
