--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
             <div class="fe-box col-lg-4 my-4">
                 <img src="./img/cleaners1.jpg"alt="" class="img"/>
-                <p class="txt1">Anti-aging Serum</p>
+                <p class="txt1">Facial Foam</p>
                 <p class="txt1">$50</p>
                 <button class="btn">Add to cart<i class="fas fa-shopping-cart"></i></button>
             </div>
