--- a/index.html
+++ b/index.html
@@ -314,11 +314,100 @@
 </section>
 <!-- End Product Section -->
 
+<!-- Start Feedback Section -->
+<section id="customer" class="py-2 mt-3 customer">
+    <div class="container-fluid">
+        <div class="row text-center">
+            <div class="col">
+                <h3 class="logo display-6">Our Customers' Feedbacks</h3>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6 mx-auto">
+                <div id="customercarousels" class="carousel" data-bs-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-bs-target="#customercarousels" class="active bg-dark" data-bs-slide-to="0"></li>
+                        <li data-bs-target="#customercarousels" class="active bg-dark" data-bs-slide-to="1"></li>
+                        <li data-bs-target="#customercarousels" class="active bg-dark" data-bs-slide-to="2"></li>
+                    </ol>
+                    
+                    <div class="carousel-inner">
+
+                        <!-- start user1 -->
+                        <div class="carousel-item text-center active mt-5">
+                            <img src="./img/sc1.png" width="200px" alt="user1" class="mb-2"/>
+
+                            <blockquote class="text-muted mb-2">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus eligendi voluptas tenetur neque, temporibus nesciunt vero voluptate sed assumenda, dolore aspernatur inventore odit placeat laudantium id ducimus. Recusandae, quibusdam ratione?</p>
+                            </blockquote>
+
+                            <h5 class="text-dark text-uppercase fw-bold mb-3">Kim</h5>
+
+                            <ul class="list-inline mb-5">
+                                <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
+                                <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
+                                <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
+                                <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
+                                <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
+                            </ul>
+                        </div>
+
+                        <!-- end user1 -->
+
+                        <!-- start user1 -->
+                        <div class="carousel-item text-center mt-5">
+                            <img src="./img/sc2.png" width="200px" alt="user1" class="mb-2"/>
+
+                            <blockquote class="text-muted mb-2">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus eligendi voluptas tenetur neque, temporibus nesciunt vero voluptate sed assumenda, dolore aspernatur inventore odit placeat laudantium id ducimus. Recusandae, quibusdam ratione?</p>
+                            </blockquote>
+
+                            <h5 class="text-dark text-uppercase fw-bold mb-3">Jennie</h5>
+
+                            <ul class="list-inline mb-5">
+                                <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
+                                <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
+                                <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
+                                <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
+                                <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
+                            </ul>
+                        </div>
+                        <!-- end user2 -->
+
+                        <!-- start user3 -->
+                        <div class="carousel-item text-center mt-5">
+                            <img src="./img/sc3.png" width="200px" alt="user1" class="mb-2"/>
+
+                            <blockquote class="text-muted mb-2">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus eligendi voluptas tenetur neque, temporibus nesciunt vero voluptate sed assumenda, dolore aspernatur inventore odit placeat laudantium id ducimus. Recusandae, quibusdam ratione?</p>
+                            </blockquote>
+
+                            <h5 class="text-dark text-uppercase fw-bold mb-3">Laura</h5>
+
+                            <ul class="list-inline mb-5">
+                                <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
+                                <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
+                                <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
+                                <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
+                                <li class="list-inline-item"><i class="fas fa-star text-warning"></i></li>
+                            </ul>
+                        </div>
+                        <!-- end user3 -->
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End Feedback Section -->
 <!-- Start Sign up Section -->
 <section class="signup">
     <div class="container-fluid">
         <div class="col-lg-5">
-            <h5 class="display-4 text-dark mb-3">Sign Up And Get Discount</h5>
+            <h5 class="display-6 text-dark mb-3">Sign Up And Get Discount</h5>
 
             <form action="" method="">
 
