--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 <!-- End Product Section -->
 
 <!-- Start Feedback Section -->
-<section id="customer" class="py-2 mt-3 customer">
+<section id="customer" class="py-2 customer">
     <div class="container-fluid">
         <div class="row text-center">
             <div class="col">
